added funct
